# indexed_meta

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yaml  publish_to_pypi.yaml
indexed_meta/: __init__.py
tests/: test_index_meta.py
